# ai_vision

./: README.md  index.html  pyproject.toml  streamlit_app.py
backend/: README.md  main.py  streamlit_app.py
src/components/: CameraFeed.tsx  NavigationGuidance.tsx  VoiceControl.tsx
src/hooks/: useNavigationAssistant.ts
src/pages/: Index.tsx
src/services/: navigationApi.ts
src/types/: speech.d.ts
